/*
Copyright 2017 Echo Park Labs

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

For additional information, contact:

email: info@echoparklabs.io
*/

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.epl.service.geometry";
option java_outer_classname = "GeometryOperatorsProto";
option objc_class_prefix = "RTG";

package geometry;

/*
 gRPC Interfaces for working with geometry operators
*/
service GeometryOperators {
    // Execute a single geometry operation
    rpc ExecuteOperation(OperatorRequest) returns (OperatorResult) {}

    rpc StreamOperations(stream OperatorRequest) returns (stream OperatorResult) {}

    rpc StreamOperationsEx(stream OperatorRequest) returns (stream OperatorResult) {}

//    rpc StreamFileOperations(stream BigFileRequest) returns (stream OperatorResult) {}
}

/*
  Type of geometry encoding
*/
enum GeometryEncodingType {
    unknown = 0;
    wkb = 1; // well-known binary
    wkt = 2; // well-known text
    geojson = 3; // geojson
    esrishape = 4; // esri shape binary
}

enum ServiceOperatorType {
    Project = 0; // project geometry from one spatial reference to another

    ExportToJson = 1; // deprecated
    ImportFromJson = 2; // deprecated
    ImportMapGeometryFromJson = 3; // deprecated

    ExportToESRIShape = 4; // export geometry to esrishape binary data
    ImportFromESRIShape = 5; // import from esrishape binary data

    Union = 6; // union two or more geometries
    Difference = 7; // difference of two or more geometries

    Proximity2D = 8; // not yet exposed

    Relate = 9; // not yet exposed 9 dim
    Equals = 10; // relational operator
    Disjoint = 11; // relational operator
    Intersects = 12; // relational operator
    Within = 13; // relational operator
    Contains = 14; // relational operator
    Crosses = 15; // relational operator
    Touches = 16; // relational operator
    Overlaps = 17; // relational operator

    Buffer = 18; // create polygon that is a buffer of the inputs
    Distance = 19; // not yet exposed
    Intersection = 20; // intersection of two or more geometries
    Clip = 21; // clip a geometry or geometries by a horizon
    Cut = 22; // cut geometry
    DensifyByLength = 23;
    DensifyByAngle = 24;
    LabelPoint = 25;

    GeodesicBuffer = 26;
    GeodeticDensifyByLength = 27;
    ShapePreservingDensify = 28;
    GeodeticLength = 29;
    GeodeticArea = 30;

    Simplify = 31;
    SimplifyOGC = 32;
    Offset = 33;
    Generalize = 34;
    GeneralizeByArea = 35;

    ExportToWkb = 36;
    ImportFromWkb = 37;
    ExportToWkt = 38;
    ImportFromWkt = 39;
    ImportFromGeoJson = 40;
    ExportToGeoJson = 41;
    SymmetricDifference = 42;
    ConvexHull = 43;
    Boundary = 44;
    RandomPoints = 45;
    EnclosingCircle = 46;
}

//message ServiceGeometryBag {
message GeometryBagData {
    // id is usually associated with position in file format or database
    //    repeated int64 geometry_ids = 1;
    repeated int64 geometry_ids = 1;
    // TODO review esri encoding typename (this is for the esri shape binary format)
    // type can be 'wkt', 'wkb', 'geojson', or 'esri'
    GeometryEncodingType geometry_encoding_type = 2;

    // the geometry encoded as base64 (wkb or esri) or as a string (wkt or geojson)
    //    repeated string geometry_strings = 3;
    //    repeated bytes geometry_binaries = 4;
    repeated string geometry_strings = 3;
    repeated bytes geometry_binaries = 4;

    SpatialReferenceData spatial_reference = 5;
}

message SpatialReferenceData {
    string proj4 = 4;
    // String that is a wkt, wkid, esri_wkt, or a proj4 string
    string esri_wkt = 5;

    // type is either 'wkid', 'esri_wkt'
    int32 wkid = 6;
}

message OperatorResult {
    GeometryBagData geometry = 1;

    bool spatial_relationship = 2;

    double distance = 3;

    map<int32, bool> relate_map = 4;
}

//message BigFileRequest {
//    OperatorRequest nested_request = 1;
//    ServiceOperatorType operator_type = 2;
//    SpatialReferenceData input_spatial_reference = 3;
//    SpatialReferenceData operation_spatial_reference = 4;
//    SpatialReferenceData result_spatial_reference = 5;
//
//    bytes data = 6;
//    int64 offset = 7;
//    string file_name = 8;
//
//    OperatorParameters = 9;
//    bool IsLastChunk = 10;
//}

//message OperatorParameters {
//    bool convex_hull_merge = 9;
//
//    repeated double buffer_distances = 10;
//    repeated double buffer_max_deviations = 28;
//    bool buffer_union_result = 11;
//
//    int32 intersection_dimension_mask = 12;
//
//    EnvelopeData clip_envelope = 13;
//
//    bool cut_consider_touch = 14;
//
//    double densify_max_length = 15;
//
//    bool simplify_force = 16;
//
//    double offset_distance = 17;
//    //TODO replace with Enum
//    string offset_join_type = 18;
//    double offset_bevel_ratio = 19;
//    double offset_flatten_error = 20;
//
//    double generalize_max_deviation = 21;
//    bool generalize_remove_degenerates = 22;
//    int32 max_vertices_in_full_circle = 23;
//
//    repeated bool generic_booleans = 24;
//    repeated double generic_doubles = 25;
//    repeated int32 generic_integers = 26;
//    repeated string generic_strings = 27;
//    string de_9im = 29;
//}

message OperatorRequest {

    GeometryBagData left_geometry = 1;
    GeometryBagData right_geometry = 2;

    OperatorRequest left_cursor = 3;
    OperatorRequest right_cursor = 4;

    ServiceOperatorType operator_type = 5;

    GeometryEncodingType results_encoding_type = 6;

    SpatialReferenceData operation_spatial_reference = 7;

    SpatialReferenceData result_spatial_reference = 8;


    bool convex_hull_merge = 9;

    repeated double buffer_distances = 10;
    repeated double buffer_max_deviations = 28;
    bool buffer_union_result = 11;

    int32 intersection_dimension_mask = 12;

    EnvelopeData clip_envelope = 13;

    bool cut_consider_touch = 14;

    double densify_max_length = 15;

    bool simplify_force = 16;

    double offset_distance = 17;
    //TODO replace with Enum
    string offset_join_type = 18;
    double offset_bevel_ratio = 19;
    double offset_flatten_error = 20;

    double generalize_max_deviation = 21;
    bool generalize_remove_degenerates = 22;
    int32 max_vertices_in_full_circle = 23;

    repeated bool generic_booleans = 24;
    repeated double generic_doubles = 25;
    repeated int32 generic_integers = 26;
    repeated string generic_strings = 27;
    string de_9im = 29;

    GeometryBagData geometries = 30;
    OperatorRequest cursor = 31;
}

message EnvelopeData {
    double xmin = 1;
    double ymin = 2;
    double xmax = 3;
    double ymax = 4;
}
